discussion/kv_engine/180950/180950_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

[Cleanup] AddStatFn should use CookieIface&

Fixup the call chains to pass down the CookieIface& to all addStats
functions as it cannot be nullptr to avoid having to change all
calls to the addStatFn

Change-Id: Icbe6564fa2b607b49d5afe34a7d62a661049864d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-07 10:43:30.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-07 11:06:07.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42029/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42029/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23328/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23328/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24167/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24167/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31347/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31347/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31347/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20937/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:279:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(persistenceCursor != nullptr);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:330:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(persistenceCursor);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:360:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(persistenceCursor);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket_iface.h:724:13: error: expected parameter declarator [clang-diagnostic-error]
            gsl::span<const std::string_view> keys) = 0;
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket_iface.h:724:13: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket_iface.h:724:47: error: expected ")" [clang-diagnostic-error]
            gsl::span<const std::string_view> keys) = 0;
                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket_iface.h:723:40: note: to match this "("
    virtual GetStatsMap getKVStoreStats(
                                       ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20937/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:279:9:
error: use of undeclared identifier "Expects" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20937/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50049/ : FAILURE

Failure of GoogleTest "TransportProtocols/XattrTest.MB_28524_TestReplaceWithXattrUncompressed/Mcbp_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/XattrTest.MB_28524_TestReplaceWithXattrUncompressed/Mcbp_XattrYes_JsonYes_SnappyYes
unknown file: error: C++ exception with description "Failed to store TransportProtocols_XattrTest_MB_28524_TestReplaceWithXattrUncompressed_Mcbp_XattrYes_JsonYes_SnappyYes: Temporary failure (134)" thrown in SetUp().
[  FAILED  ] TransportProtocols/XattrTest.MB_28524_TestReplaceWithXattrUncompressed/Mcbp_XattrYes_JsonYes_SnappyYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (15 ms)
TransportProtocols/XattrTest.MB_28524_TestReplaceWithXattrUncompressed/Mcbp_XattrYes_JsonYes_SnappyYes
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50049/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10654/ : FAILURE

Compile error at [2022-10-07T11:00:02.985Z] ../kv_engine/engines/ep/src/checkpoint_manager.h:279:9:
error: use of undeclared identifier "Expects"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10654/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20173/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22339/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10754/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22932/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
